src/test/resources/plang-strict/passing/033_modulus.plang
**#Modulus operátor
**Memory:a=Integer(1)
program Vardecl
  Változók:
    a: Egész

  a := 7 mod 3
program_vége
