src/test/resources/plang-strict/parse-error/008_assignment_bad_rvalue.plang
**#Malformed RValue
**FirstErrorLoc:7,1
program vardecl_bad_rvalue
  Változók:
    x: Egész
  x :=
program_vége
